<?xml version="1.0"?>
<package format="2">
  <name>wuji_hand_description</name>
  <version>0.2.1</version>
  <description>Wujihand description package containing URDF files and launch configurations</description>

  <maintainer email="support@wuji.tech">Wuji Technology</maintainer>

  <license>MIT</license>

  <url type="website">wuji.tech</url>
  <url type="bugtracker">https://github.com/wuji-technology/wujihand-urdf/issues</url>
  <url type="repository">https://github.com/wuji-technology/wujihand-urdf</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
